--- a/Clangen/Views/StartScreen.axaml
+++ b/Clangen/Views/StartScreen.axaml
@@ -4,12 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:Clangen.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Clangen.Views.MainView"
-             x:DataType="vm:MainViewModel">
+             x:Class="Clangen.Views.StartScreenView"
+             x:DataType="vm:StartScreenViewModel">
   <Design.DataContext>
     <!-- This only sets the DataContext for the previewer in an IDE,
          to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <vm:MainViewModel />
+    <vm:StartScreenViewModel />
   </Design.DataContext>
 
   <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
