--- a/Clangen/Views/MainWindow.axaml
+++ b/Clangen/Views/MainWindow.axaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Clangen.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Clangen">
-        <views:MainView />
+        Title="ClanGen">
+        <views:StartScreenView />
 </Window>
