Additional Work on Name, Routing.

--- a/Clangen/Views/StartScreenView.axaml
+++ b/Clangen/Views/StartScreenView.axaml
@@ -16,7 +16,7 @@
             <ImageBrush Source="/Assets/menu.png" Stretch="UniformToFill"/>
         </StackPanel.Background>
         
-        <Button Content="Start">
-        </Button>
+        <Button Content="Start" Command="{Binding PressStart}"/>
+        <Button Content="Settings" Command="{Binding PressSettings}"/>
     </StackPanel>
 </UserControl>
