Sprites! Some basic generation and Display

--- a/Clangen/Views/ClanScreenView.axaml
+++ b/Clangen/Views/ClanScreenView.axaml
@@ -9,8 +9,8 @@
     <Design.DataContext>
     <!-- This only sets the DataContext for the previewer in an IDE,
          to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <vm:ClanScreenViewModel />
+        <vm:ClanScreenViewModel />
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Image Source="{Binding CatImage}" RenderOptions.BitmapInterpolationMode="None"/>
 </UserControl>
