--- a/Clangen/Views/StartScreenView.axaml
+++ b/Clangen/Views/StartScreenView.axaml
@@ -6,12 +6,14 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="700"
              x:Class="Clangen.Views.StartScreenView"
              x:DataType="vm:StartScreenViewModel">
-  <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <vm:StartScreenViewModel />
-  </Design.DataContext>
+  <!-- <Design.DataContext>
+    <- - This only sets the DataContext for the previewer in an IDE,
+         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) - ->
+    <vm:StartScreenViewModel /> 
+  </Design.DataContext> -->
+  
     <StackPanel>
+        <TextBox>ClanGen : Clan Generator </TextBox>
         <Button Content="Start" Command="{Binding PressStart}"/>
         <Button Content="Settings" Command="{Binding PressSettings}"/>
     </StackPanel>
