--- a/Clangen/Views/ClanScreenView.axaml
+++ b/Clangen/Views/ClanScreenView.axaml
@@ -6,11 +6,11 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="700"
              x:Class="Clangen.Views.ClanScreenView"
              x:DataType="vm:ClanScreenViewModel">
-    <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
+    <!-- <Design.DataContext>
+         <- - This only sets the DataContext for the previewer in an IDE,
+         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) - ->
         <vm:ClanScreenViewModel />
-    </Design.DataContext>
+    </Design.DataContext>  -->
 
     <Image Source="{Binding CatImage}" RenderOptions.BitmapInterpolationMode="None"/>
 </UserControl>
