Got Binding Correct on the Cat Buttons
Lord help me there were 100 different ways to do this based on difference versions. Thank goodness I found one that worked

--- a/Clangen/Views/ClanScreenView.axaml
+++ b/Clangen/Views/ClanScreenView.axaml
@@ -13,6 +13,24 @@
     </Design.DataContext>  -->
     
     <ItemsControl ItemsSource="{Binding CatTiles}">
+        <ItemsControl.ItemsPanel>
+            <ItemsPanelTemplate>
+                <WrapPanel />
+            </ItemsPanelTemplate>
+        </ItemsControl.ItemsPanel>
+
+        <ItemsControl.ItemTemplate>
+            <DataTemplate>
+                <Button Background="Transparent"  Command="{Binding ((vm:ClanScreenViewModel)DataContext).PressCatButtonCommand, 
+                        RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                        CommandParameter="{Binding CatId}">
+                    <StackPanel>
+                        <Image Source="{Binding CatImage}" Width="100" RenderOptions.BitmapInterpolationMode="None"/>
+                        <TextBlock Text="{Binding CatName}" HorizontalAlignment="Center"/>
+                    </StackPanel>
+                </Button>
+            </DataTemplate>
+        </ItemsControl.ItemTemplate>
     </ItemsControl>
     
     <!-- <Image Source="{Binding CatImage}" RenderOptions.BitmapInterpolationMode="None"/>: -->
