--- a/Clangen/Views/MainView.axaml
+++ b/Clangen/Views/MainView.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:Clangen.ViewModels"
+             Height="700" Width="800"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="700"
              x:Class="Clangen.Views.MainView"
              x:DataType="vm:MainViewModel">
