Remove ClanGen.Browser, Switch to Prism, ReactiveUI

--- a/Clangen/Views/CatProfileScreenView.axaml
+++ b/Clangen/Views/CatProfileScreenView.axaml
@@ -6,5 +6,5 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Clangen.Views.CatProfileScreenView"
              x:DataType="vm:CatProfileScreenViewModel">
-    <TextBlock Text="{Binding CatName}"></TextBlock>
+    <!-- <TextBlock Text="{Binding CatName}"></TextBlock> -->
 </UserControl>
