--- a/Clangen/Views/MainView.axaml
+++ b/Clangen/Views/MainView.axaml
@@ -2,10 +2,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:prism="http://prismlibrary.com/"
              xmlns:vm="clr-namespace:Clangen.ViewModels"
+             
              Height="700" Width="800"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="700"
              x:Class="Clangen.Views.MainView"
              x:DataType="vm:MainViewModel">
-    <ContentControl Content="{Binding Content}"/>
+    <ContentControl prism:RegionManager.RegionName="MainRegion" />
 </UserControl>
