--- a/Clangen/Views/ClanScreenView.axaml
+++ b/Clangen/Views/ClanScreenView.axaml
@@ -2,10 +2,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:prism="http://prismlibrary.com/"
              xmlns:vm="clr-namespace:Clangen.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="700"
              x:Class="Clangen.Views.ClanScreenView"
              x:DataType="vm:ClanScreenViewModel">
+    
     <!-- <Design.DataContext>
          <- - This only sets the DataContext for the previewer in an IDE,
          to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) - ->
@@ -36,4 +38,8 @@
     </ItemsControl>
     
     -->
+    <Grid Grid.Row="1" Grid.ColumnDefinitions="Auto,Auto">
+        <ContentControl Grid.Column="0" prism:RegionManager.RegionName="TestRegion1" ></ContentControl>
+        <ContentControl Grid.Column="1" prism:RegionManager.RegionName="TestRegion2" ></ContentControl>
+    </Grid>
 </UserControl>
