--- a/Clangen/Views/Test2View.axaml
+++ b/Clangen/Views/Test2View.axaml
@@ -2,10 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vm="clr-namespace:Clangen.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Clangen.Views.CatProfileScreenView"
-             x:DataType="vm:CatProfileScreenViewModel">
-    <TextBlock>Clan Screen </TextBlock>
-    <!-- <TextBlock Text="{Binding CatName}"></TextBlock> -->
+             x:Class="Clangen.Views.Test2View">
+    <TextBlock>         TEST 2 VIEW </TextBlock>
 </UserControl>
